fix cropped video background

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,13 +4,17 @@
 /* Background Video */
 #dynamicBg {
   position: fixed;
-  top: 0;
-  left: 0;
-  /* width: 100vw; */
-  height: 100vh;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: auto;
+  min-width: 100%;
+  min-height: 100%;
   z-index: -1;
-
   opacity: 0.4;
+
+  /* Center the image */
+  transform: translate(-50%, -50%);
 }
 
 /* Login page */
